...
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/profileNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="?attr/colorSurfaceInverse"
                    android:text="Guest."
                    android:textSize="20dp" />
...
                    android:textColor="?attr/colorSurfaceInverse"
                    android:fontFamily="@font/roboto_light"
                    android:textSize="13dp" />
            </TableLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ruleCard"
                style="?attr/materialCardViewOutlinedStyle"
                app:cardBackgroundColor="?attr/colorPrimaryContainer"
                app:strokeWidth="0dp"
                app:strokeColor="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                        android:textColor="?attr/colorOnPrimaryContainer"
                        app:layout_constraintBottom_toBottomOf="@+id/favoriteButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/favoriteButton" />

                    <TextView
                        android:id="@+id/ruleOfDayDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"
                        android:text="125"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
...
                        android:fontFamily="@font/roboto_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/ruleOfDayQuote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="16dp"
...
                        android:textColor="?attr/colorOnPrimaryContainer"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ruleOfDayDay" />

                    <TextView
                        android:id="@+id/ruleOfDayAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:alpha="0.5"
                        android:text="- Nitin Namdeo"
                        android:fontFamily="@font/roboto_light"
...
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/copyQuote"
                            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                            app:iconTint="?attr/colorOnPrimaryContainer"
                            android:backgroundTint="?attr/colorPrimaryContainer"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            app:icon="@drawable/baseline_content_copy_24"
...
                    android:src="@drawable/round_person_24"
                    app:tint="?attr/colorSurfaceInverse"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profileNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="20dp"
                    app:hintEnabled="false"
                    app:boxCornerRadiusTopStart="15dp"
...
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usedForMidTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter name"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateProfileName"
                    style="@style/Widget.Material3.Button.UnelevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="Update"
...
                    app:layout_constraintTop_toBottomOf="@+id/profileNameInput" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab_share"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        android:shadowColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
...
