<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyRulesFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/myRulesCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/myRulesFavorites"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:text="Favorites"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:icon="@drawable/round_favorite_24"
                app:iconTint="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/myRulesQuotes"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:text="My Quotes"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:icon="@drawable/baseline_format_quote_24"
                app:iconTint="?attr/colorOnSurfaceVariant" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_myRules"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myRulesCategory" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_addQuote"
            style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Add Quote"
            android:layout_margin="16dp"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/round_add_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>