<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/round_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/round_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/design"
        android:icon="@drawable/round_create_24"
        android:title="@string/title_designer" />

    <item
        android:id="@+id/myRules"
        android:icon="@drawable/round_favorite_24"
        android:title="@string/title_my_rules" />

</menu>